[tool.poetry]
name = "qlm"
version = "0.1.0"
description = "A CLI program for taking notes"
authors = ["Alexander Darby <63904626+osintalex@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
qlm = "qlm.main:app"

[tool.poetry.dependencies]
python = "^3.7.2"
typer = {extras = ["all"], version = "^0.6.1"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pre-commit = "^2.20.0"
mypy = "^0.971"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
