[tool.poetry]
name = "qlm"
version = "0.1.8"
description = "A CLI program for taking notes"
authors = ["Alexander Darby <63904626+osintalex@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
qlm = "qlm.main:app"

[tool.poetry.dependencies]
python = "^3.7.0"
typer = {extras = ["all"], version = "^0.6.1"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"

[tool.poetry.group.lint.dependencies]
mypy = "^0.971"
pylint = "~2.13.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocs-glightbox = "^0.2.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
