[tool.poetry]
name = "qlm"
version = "0.0.1"
description = "A command line app for taking beautiful notes."
documentation = "https://osintalex.github.io/qlm/"
authors = ["Alexander Darby <63904626+osintalex@users.noreply.github.com>"]
readme = "README.md"
license = "CC0 1.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Typing :: Typed',
]

[tool.poetry.scripts]
qlm = "qlm.main:app"

[tool.poetry.dependencies]
python = "^3.7.0"
typer = {extras = ["all"], version = "^0.6.1"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"

[tool.poetry.group.lint.dependencies]
mypy = "^0.971"
pylint = "~2.13.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocs-glightbox = "^0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
